# Django-diary

./: .gitignore  README.md
diary_project/: .gitmessage.txt  pyproject.toml
diary_project/config/settings/: base.py  dev.py  prod.py
diary_project/config/urls/: __init__.py  urls_dev.py  urls_prod.py
